# acf-jacinto

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.html  README.md  py_conversion.md  setup.py
channels/: __init__.py  chnsCellSum.m  chnsCellSum.py  chnsCompute.m  chnsCompute.py  chnsPyramid.m  chnsPyramid.py  chnsScaling.m  color_space.py  gradientHistFast.m  gradientMag.m  gradientMagFast.m  imPad.py  processInput.m  processInput.py  rgbConvert.m  rgbConvert.py
channels/private/: CMakeLists.txt  bindings.cpp  channels.h  channels_priv.h  chnsCellSumMex.cpp  chnsCellSumMex.mexw64  gradientFastMex.cpp  gradientFastMex.mexw64  gradientMex.cpp  gradientMex.mexw64  imPadMex.cpp  rgbConvertMex.cpp  sse.hpp
detector/: acfDetect.m  acfExample.m  acfJacintoDemoInria.m  acfJacintoExample.m  acfJacintoExtract.m  acfJacintoTrainTest.m  acfModify.m  acfSaveDescriptor.m  acfTrain.m
detector/models/: AcfJacintoInriaDetector.descriptor  AcfJacintoInriaDetector.mat  AcfJacintoInriaLog.txt
detector/models/backup/: AcfJacintoInriaDets.txt
detector/private/: acfDetect1.cpp  acfDetect1.mexw64
matlab/: __init__.py  getPrmDflt.py
tests/: test_chnsCellSum.py  test_chnsCompute.py  test_imPad.py
tests/channels/: test_chnsCompute.py  test_imPad.py  test_rgbConvert.py
tests/matlab/: test_getPrmDflt.py
vbb/: dbEval.m  dbExtractList.m  dbInfo.m  objectTypes.txt  vbb.m  vbbLabeler.m
videos/: seqReaderPlugin.m
